usersapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp
  labels:
    app: users
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      tier: frontend
  template:
    metadata:
      labels:
        app: webapp-sql
        tier: frontend
    spec:
      containers:
      - name: users
        image: hshar/users
        ports:
        - containerPort: 8081
        volumeMounts:
          - name: secret-vol
            mountPath: "/var/secrets/"
            readOnly: true
      volumes:
        - name: secret-vol
          secret:
           secretName: db-secret
