adminappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminapp
spec:
  selector:
    app: admin
    tier: frontend
  ports:
   - port: 80
  type: NodePort
