mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
      app: mysql
      tier: backend
  ports:
  - port: 3306
  clusterIP: None
