userappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapp
spec:
  selector:
    app: users
    tier: frontend
  ports:
   - port: 80
  type: NodePort
